# networkdata_analysis_practice

./: .env  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.codex/: config.toml
.devcontainer/: devcontainer.json
context/: Dockerfile  docker-compose.yaml
notebook/: 01.ipynb
notebook/.ipynb_checkpoints/: 01-checkpoint.ipynb
notebook/chap5/: notebook.ipynb
notebook/chap6/: notebook.ipynb
