[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.9",
    "matplotlib",
    "networkx",
    "numpy>=2.3.4",
    "pandas",
    "scikit-learn",
    "torch",
    "torch-cluster",
    "torch-geometric",
    "torch-scatter",
    "torch-sparse",
    "tqdm",
]

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
torch-sparse = ["torch"]